--- a/dummy-frontend/nginx/default.conf
+++ b/dummy-frontend/nginx/default.conf
@@ -12,6 +12,15 @@ server {
         proxy_cache_bypass $http_upgrade;
     }
 
+    location /api/login {
+        proxy_pass http://backend:5000;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+
     location / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
